--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,27 @@
-.body{
+/* Color del body de la pagina */
+body{
     background-color: black;
 }
+
+/* Estructura para sections */
 section{
   border-top: 5%;
 }
+
+/* Estructura del contenedor de la pagina */
 #container{
   font-family: 'Bowlby One SC', cursive;
   display: 100vh;
   position: relative;
   background-color: black;
 }
+
+/* Definir color de las letras del menu */
 #container .menu .links ul li a{
   color: #E2E2E2;
 }
+
+/* Estructura de la imagen del menu */
 #container nav img{
   width:10%;
   margin-right: 3%;
@@ -20,9 +29,13 @@ section{
   border-color: white;
   border-radius: 10px;
 }
+
+/* Color del boton para mostrar y esconder menu */
 #container nav .navbar-toggler{
   background-color: #fff;
 }
+
+/* Estructura del home/portada de la pagina */
 .found{
   height: 100vh;
   background:   url('img/fondo.jpg');
@@ -32,7 +45,8 @@ section{
   text-align: center;
   margin-bottom: 5%;
 }
-/* letra de la imagen principal*/
+
+/* Letra de la portada/home de la pagina */
 .letra-centro{
   color: #FFF;
   position:relative;
@@ -40,16 +54,23 @@ section{
   font-size: 3em;
   text-transform: capitalize;
 }
+
+/* Letra del pie de la portada */
 .letra-pie{
   color: #fff;
 }
+
+/* Color del menu */
 .colour{
   background-color: rgba(0, 0, 0, 0.6);
-
 }
+
+/* Color del menu cuando hace animacion */
 .top-nav-collapse{
   background: rgba(0, 0, 0, 0.9);
 }
+
+/* Color que indica cambio de seccion */
 hr {
   background-color:  #fff;
   height: 7px;
@@ -61,9 +82,13 @@ hr {
   border-style: inset;
   border-width: 1px;
 }
+
+/* Color encabezado noticias */
 .sec-noticias{
   color: white;
 }
+
+/* Color de los cards de noticia */
 .card{
   background-color: #0d0d0d !important;
 }
