--- a/styles.css
+++ b/styles.css
@@ -140,16 +140,19 @@ hr {
 	text-align: center;
 
 }
-@media only screen and (max-width: 768px) {
+@media screen and (max-device-width: 768px) {
   .card-text{
-    font-size: 1em!important;
+    font-size:  2.5em!important;
   }
 	#container nav img{
-	  width:10%;
+	  width:20%;
 	  margin-right: 2%;
-		height: 3.5em;
+		height: 10em;
 	}
 	.nav-item{
-		font-size: 2.8em;
+		font-size: 4em;
+	}
+	.navbar-toggler{
+		
 	}
 }
