--- a/styles.css
+++ b/styles.css
@@ -140,31 +140,31 @@ hr {
 	text-align: center;
 
 }
-@media screen and (max-device-width: 768px) {
+@media screen and (max-device-width: 950px) {
   .card-text{
     font-size:  2.5em!important;
   }
 	#container nav img{
-	  width:20%!important;
-	  margin-right: 2%!important;
-		height: 10em!important;
+	  width:20%;
+	  margin-right: 2%;
+		height: 10em;
 	}
 	.nav-item{
-		font-size: 4em!important;
+		font-size: 4em;
 	}
 	.navbar-toggler{
-		height: 6em!important;
-		width: 13%!important;
+		height: 6em;
+		width: 13%;
 	}
 	.section-news{
-		font-size: 5em!important;
+		font-size: 5em;
 	}
 	.btn{
 		font-size: 3em!important;
-		width: 40%!important;
+		width: 40%;
 	}
 	.ver-mas{
-		border: solid!important;
+		border: solid;
 		width: 100%;
 		font-size: 3em!important;
 	}
