--- a/styles.css
+++ b/styles.css
@@ -141,20 +141,27 @@ hr {
 
 }
 @media screen and (max-device-width: 950px) {
+	.background img{
+
+		width: 20%;
+		position:relative;
+	  padding-top: 50%;
+	}
+	.menu{
+		height: 5em;
+	}
   .card-text{
     font-size:  2.5em!important;
   }
 	#container nav img{
-	  width:20%;
+	  width:auto;
 	  margin-right: 2%;
-		height: 10em;
 	}
 	.nav-item{
 		font-size: 4em;
 	}
 	.navbar-toggler{
-		height: 6em;
-		width: 13%;
+		width: auto;
 	}
 	.section-news{
 		font-size: 5em;
