--- a/styles.css
+++ b/styles.css
@@ -140,11 +140,11 @@ hr {
 	text-align: center;
 
 }
-@media screen and (max-device-width: 950px) {
+@media screen and (max-device-width: 1980px) {
 	.background img{
 		width: 20%;
 		position:relative;
-	  padding-top: 50%;
+	  padding-top: 30%;
 	}
 	.menu{
 		height: 6em!important;
@@ -153,8 +153,8 @@ hr {
     font-size:  2.5em!important;
   }
 	#container nav img{
-	  width:15%;
-		height: 100%;
+	  width:13%;
+		height: 5em;
 	  margin-right: 2%;
 	}
 	.nav-item{
