--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,8 @@ hr {
 	text-align: center;
 
 }
-@media screen and (max-device-width: 1980px) {
+@media screen and (max-device-width: 1980px) and (max-device-height: 1080px)
+ {
 	.background img{
 		width: 20%;
 		position:relative;
