--- a/styles.css
+++ b/styles.css
@@ -148,14 +148,14 @@ hr {
 	  padding-top: 30%;
 	}
 	.menu{
-		height: 6em!important;
+		height: 9em!important;
 	}
   .card-text{
     font-size:  2.5em!important;
   }
 	#container nav img{
-	  width:13%;
-		height: 5em;
+	  width:9em;
+		height: 8em;
 	  margin-right: 2%;
 	}
 	.nav-item{
