--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
-/* Propiedades definidas que permite que el scroll sea mas suave cuando se hace un salto de pagina */
 html {
 	scroll-behavior: smooth !important;
 }
-
 /* Color del body de la pagina */
 body{
     background-color: white;
@@ -10,127 +8,124 @@ body{
 
 /* Estructura para sections */
 section{
-  	border-top: 5%;
+  border-top: 5%;
 }
 
 /* Estructura del contenedor de la pagina */
 #container{
-  	font-family: 'Bowlby One SC', cursive;
-  	position: relative;
-  	background-color: #e0e0e0;
+  font-family: 'Bowlby One SC', cursive;
+  position: relative;
+  background-color: ##e0e0e0;
 }
 
 /* Definir color de las letras del menu */
 #container .menu .links ul li a{
-  	color: #E2E2E2;
+  color: #E2E2E2;
 }
 
 /* Estructura de la imagen del menu */
 #container nav img{
-  	width:6%;
-  	margin-right: 2%;
+  width:6%;
+  margin-right: 2%;
 	height: 3.5em;
 }
-
+.ancla{
+  text-decoration: none;
+  color:rgba(#141b41, 0);
+	display: none;
+}
 /* Color del boton para mostrar y esconder menu */
 #container nav .navbar-toggler{
-  	background-color: #fff;
+  background-color: #fff;
 }
 
-/* Color de la opcion del menu cuando nos encontremos sobre ella */
 li.active{
 	background-color: black!important;
 }
-
-/* Color del minijuego cuando se encuentre sobre el */
 .carousel-game .active{
 	background-color: black!important;
 }
 
-/* Propiedades definidas sobre el contenedor de la pagina */
 .page-container{
 	padding: 0!important;
 }
 
-/* Propiedades definidas sobre la seccion del inicio de la pagina */
 .background{
 	justify-content: center;
-  	height: 100vh;
-  	background:   url('img/fondo.jpg');
-  	background-repeat: no-repeat;
-  	background-size: cover;
-  	font-family: 'Bowlby One SC', cursive;
-  	text-align: center;
-  	margin-bottom: 5%;
-}
-
-/* Propiedades definidas sobre la letra del pie de la imagen de inicio */
-.letra-pie{
-	color: white;
+  height: 100vh;
+  background:   url('img/fondo.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Bowlby One SC', cursive;
+  text-align: center;
+  margin-bottom: 5%;
 }
 
 /* imagen de la portada */
 .background img{
+
 	width: 20%;
 	position:relative;
-  	padding-top: 14%;
+  padding-top: 14%;
 }
 
-/* Propiedades definidas sobre el contenedor de las noticias */
 .container-news{
-  	background-repeat: no-repeat;
-  	background-size:cover;
-  	font-family: 'Bowlby One SC', cursive;
-  	text-align: center;
-  	margin-bottom: 5%;
+  /*background: url('img/noticias2.jpg');*/
+  background-repeat: no-repeat;
+  background-size:cover;
+  font-family: 'Bowlby One SC', cursive;
+  text-align: center;
+  margin-bottom: 5%;
+
+}
+/* letra de la imagen principal*/
+.letra-pie{
+  color: white;
 }
 
 /* Color del menu */
 .colour{
-  	background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 /* Color del menu cuando hace animacion */
 .top-nav-collapse{
-  	background: rgba(156, 156, 156, 0.8);
+  background: rgba(156, 156, 156, 0.8);
 }
 
 /* Estilo del hr que indica cambio de seccion */
 hr {
-  	background-color:  black;
-  	width: 90%;
-  	margin-top: 0.5em;
-  	margin-bottom: 0.5em;
-  	margin-left: auto;
- 	margin-right: auto;
+  background-color:  black;
+  width: 90%;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Color encabezado noticias */
 .section-news{
-  	color: black;
+  color: black;
 	margin-bottom: 4%;
 	font-size: 2.5em;
 }
 
 /* Color de los cards de noticia */
 .card{
-  	background-color: white !important;
-  	border-radius: 10px!important;
+  background-color: white !important;
+  border-radius: 10px!important;
 }
 
-/* Propiedades definidas sobre la imagen de la noticia */
 .card-img-top{
-  	width: 90%!important;
+  width: 90%!important;
 }
 
-/* Propiedades definidas sobre el texto de la noticia */
 .card .card-body .card-text{
-  	color: black!important;
-  	padding-top: 1em;
+  color: black!important;
+  padding-top: 1em;
 	height: 11em;
 }
 
-/* Propiedades definidas sobre la noticia cuando se pasa el mouse sobre ella */
 .card:hover{
 	-ms-transform: scale(1.2); /* IE 9 */
 	-webkit-transform: scale(1.2); /* Safari 3-8 */
@@ -138,150 +133,112 @@ hr {
 	z-index: 1;
 }
 
-/* Propiedades definidas sobre las noticias que estan escondidas */
 .hidden-news{
-  	margin: 0;
-  	padding: 0!important;
-  	height: auto;
+  margin: 0;
+  padding: 0!important;
+  height: auto;
 }
-
-/* Propiedades definidas sobre los botones de la pagina */
 .btn{
- 	background-color: white!important;
+  background-color: white!important;
 	border-color: black !important;
 	border: solid!important;
-  	color: black!important;
+  color: black!important;
 }
-
-/*Propiedades definidas sobre el contenedor de 100vh*/
+/*contenedor de 100vh*/
 .container-100vh{
 	text-align: center;
 	height: 100vh;
 }
-
-/* Propiedades definidas sobre las imagenes de los juegos */
+/*Imagen juego */
 .game{
-  	width: 100%;
-  	height: 100%;
-  	background-size: cover;
-  	opacity: 0.2;
-}
-
-/* Propiedades definidas sobre el texto de imagen de los juegos */
-.game-text{
-	color: #fff;
-	border-radius: 10px;
-	text-align: center;
-}
-
-/* Propiedades definidas sobre las opciones del menu */
-.nav-link{
-	color: black;
-}
-
-/* Propiedades definidas sobre la opcion activa de la seccion esports */
-.esports .nav .active{
-	color: black!important;
-	background-color: rgb(255, 255, 255)!important;
-	border-color: black black white black!important;
-}
-
-/* Propiedades definidas sobre las opciones de la seccion de esports */
-#Tab-Esports{
-	justify-content: center;
-	border-bottom: 1px solid;
-}
-
-/* Propiedades definidas sobre las secciones esports */
-.section-esports{
-	color: black;
-	margin-bottom: 4%;
-	font-size: 3em;
-	padding-top: 2%;
-}
-
-/* Propiedades definidas sobre el trailer del juego de la seccion esports */
-.trailer{
-	border: 5px black solid;
-	padding: 1px!important;
-	border-radius: 10px;
-}
-
-/* Propiedades definidas sobre la imagen del juego de la seccion esports */
-.img-esports{
-	border: 4px black solid;
-	padding: 0px!important;
-	border-radius: 10px;
-	opacity: 0.9;
-}
-
-/* Propiedades definidas sobre el contenedor de la imagen del juego */
-.container-imgGame{
-  	position: relative;
-  	text-align: center;
-  	color: white;
-}
-
-/* Propiedades definidas sobre el texto de la imagen del juego de la seccion esports */
-.centered-text {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  opacity: 0.2;
+  }
+	/*Texto de imagen*/
+	.game-text{
+	  color: #fff;
+	  border-radius: 10px;
+	  text-align: center;
+	}
+	/*Menu Esports*/
+	.nav-link{
+		color: black;
+	}
+	.esports .nav .active{
+		color: black!important;
+		background-color: rgb(255, 255, 255)!important;
+		border-color: black black white black!important;
+	}
+	#Tab-Esports{
+		justify-content: center;
+		border-bottom: 1px solid;
+	}
+	/*Secciones Esports*/
+	.section-esports{
+	  color: black;
+		margin-bottom: 4%;
+		font-size: 3em;
+		padding-top: 2%;
+	}
+	.trailer{
+		border: 5px black solid;
+		padding: 1px!important;
+		border-radius: 10px;
+	}
+	.img-esports{
+		border: 4px black solid;
+		padding: 0px!important;
+		border-radius: 10px;
+		opacity: 0.9;
+	}
+	.container-imgGame{
+  position: relative;
+  text-align: center;
+  color: white;
+	}
+	.centered-text {
 	color: white;
-  	position: absolute;
-  	top: 78%;
-  	left: 50%;
+  position: absolute;
+  top: 78%;
+  left: 50%;
 	width: 90%;
 	background: rgba(0, 0, 0, 0.8);
-  	transform: translate(-50%, -50%);
-}
-
-/* Propiedades definidas sobre el media query cuando el dispositivo pasa cierta cantidad de pixeles */
-@media screen and (max-device-width: 980px){
-	/* Propiedades sobre la imagen de fondo del inicio */
+  transform: translate(-50%, -50%);
+	}
+@media screen and (max-device-width: 980px)
+ {
 	.background img{
 		width: 20%;
 		position:relative;
-	  	padding-top: 30%;
+	  padding-top: 30%;
 	}
-
-	/* Propiedades definidas sobre el menu de la pagina */
 	.menu{
 		height: 9em!important;
 	}
-
-	/* Propiedades definidas sobre el texto de los cards de la pagina */
-  	.card-text{
-    	font-size:  2.5em!important;
-	}
-
-	/* Propiedades definidas sobre la imagen del logo del menu */
+  .card-text{
+    font-size:  2.5em!important;
+  }
 	#container nav img{
-	  	width:9em;
+	  width:9em;
 		height: 8em;
-	  	margin-right: 2%;
+	  margin-right: 2%;
 	}
-
-	/* Propiedades definidas sobre las opciones del menu */
 	.nav-item{
 		font-size: 4em;
 	}
-
-	/* Propiedades definidas sobre el boton del menu cuando colapsa */
 	.navbar-toggler{
 		width: 15%;
 		height: 100%;
 	}
-
-	/* Propiedades definidas sobre las secciones de las noticias */
 	.section-news{
 		font-size: 5em;
 	}
-
-	/* Propiedades definidas sobre los botones de la pagina */
 	.btn{
 		font-size: 3em!important;
 		width: 40%;
 	}
-
-	/* Propiedades definidas sobre el boton ver-mas de la pagina */
 	.ver-mas{
 		border: solid;
 		width: 100%;
