arreglos para accesibilidad web

--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ hr {
 		border-bottom: 1px solid;
 	}
 	/*Secciones Esports*/
-	#carousel-Noticias-esports{
+	.carousel-Noticias-esports{
 		height: 13em!important;
 	}
 	.section-esports{
